                Usage: (1) MouseDown+Drag+MouseUp  (2) Click+Move+Click  (3) Click+type number+Enter
CHANGE: UI    | Open Torrent Window now asks to create directories if they don't exist yet, instead of evilly auto-creating them when you click the Browse button [The_8472] 
CHANGE: UI    | Added download status to the General torrent view [amc1]
                
BUGFIX: Core  | Fixed bug where renaming a download in some conditions would generate "Target is sub-directory" errors [amc1]                
BUGFIX: Core  | Fixed swarm view rendering bug where some incomplete peers were shown as full circles [The8472]
BUGFIX: Plug  | Fixed bug where previously removed child menu items would still be present when generating some menus [amc1]


2007.06.20 | Azureus 3.0.1.6

FEATURE: Core | IP Filter Autoloading. Supports DAT (eMule), P2P (PeerGardian, splist), and P2B v1,2,3 (Peer Gardian 2) formats. [TuxPaper]
FEATURE: UI   | Option to display divider lines every 60 updates on the Statistics view [amc1]
FEATURE: Plug | Added helper class to make listening to download events across all downloads easier [amc1]
FEATURE: Core | Azureus AutoSpeed v2 Beta [ranul]

BUGFIX: Core | Plugin installation/updates using Vista [parg,tuxpaper]



2007.05.24 | Azureus 3.0.1.4

FEATURE: Core | Byte-level download control for Downloads [Parg] 
FEATURE: Core | Speed tester wizard [ranul,Parg]
FEATURE: UI   | Added "Transfers Bar" (similar to the "Download Bar") [amc1]
FEATURE: UI   | Correctly identifies FoxTorrent and Blizzard Downloader peers [amc1]
FEATURE: UI   | Determines version information for Bits On Wheels and Opera peers [amc1]
FEATURE: UI   | Vivaldi view can use mouse wheel too zoom now (requires clicking on the view first) [TuxPaper]
FEATURE: UI   | Date Completed column [TuxPaper]
FEATURE: UI   | (Beta) Various Auto Speed algorithms [ranul]
FEATURE: UI   | Auto-open MyShares if any shares [Parg]

CHANGE: Core  | Handle 503s better with webseeds [Jochen Seifarth,Parg]